--- a/Screenshots/style.css
+++ b/Screenshots/style.css
@@ -799,6 +799,9 @@ h4 {
   flex-direction: column;
   padding-top: 10px;
 }
+#shopping-cart{
+  overflow-x: auto;
+}
 #shopping-cart table{
   width: 100%;
   border-collapse: collapse;
@@ -865,6 +868,9 @@ button.normal1{
 .ner{
   display: flex;
   flex-direction: column;
+}
+.trash{
+  display: none;
 }
 
 /* Start Media Quer*/
@@ -986,7 +992,7 @@ height: 100%;
 form div.incorrect input{
   border-color: #f06272 ;
 }
-.cartTab{
+.cart{
   height: auto;
   width: auto;
   display: flex;
@@ -998,6 +1004,7 @@ form div.incorrect input{
 .cart-item{
   display: flex;
 }
+
 
 
 @media (max-width: 477px) {
@@ -1015,6 +1022,7 @@ form div.incorrect input{
   }
   #hero {
     padding: 0 20px;
+    height: 40vh;
     background-position: 55%;
   }
   #feature{
@@ -1126,4 +1134,38 @@ form div.incorrect input{
   width: 100%;
   max-height: fit-content;
 }
+#shopping-cart table{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+#shopping-cart td:nth-child(4){
+  padding-left: 15px;
+    padding-bottom: 5px;
+    display: flex;
+    justify-content: flex-start;
+;
+}
+#shopping-cart td:nth-child(1){
+  display: none;
+}
+#shopping-cart td:nth-child(3){
+  display: flex;
+    width: 250px;
+    flex-direction: row;
+    justify-content: center
+}
+#shopping-cart td:nth-child(5){
+  display: flex;
+  justify-content: right;
+  align-items: center;
+
+}
+.trash{
+  display: block;
+  padding-left: 5px;
+}
+
+
+
 }
